--- a/views/partials/banner.ejs
+++ b/views/partials/banner.ejs
@@ -1,4 +1,4 @@
-<div class="jumbotron d-flex justify-content-center align-items-center text-info border border-secondary">
+<div class="banner jumbotron d-flex justify-content-center align-items-center text-info border border-secondary">
     <i class="fas fa-university fa-4x mr-3 mt-3"></i>
     <div class="display-3 font-weight-bold">
         <u>
