--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg bg-dark position-fixed w-100">
     <a class="navbar-brand" href="/"><i class="fas fa-university"></i></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
